[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'registrar/std',
]
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.6'

[dependencies.frame-support]
default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# branch = 'rococo-v1'
version = '2.0.0'

[dependencies.frame-system]
default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# branch = 'rococo-v1'
version = '2.0.0'

# [dev-dependencies]
# serde = { version = "1.0.101" }

[dev-dependencies.sp-core]
default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# branch = 'rococo-v1'
version = '2.0.0'

[dev-dependencies.sp-io]
default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# branch = 'rococo-v1'
version = '2.0.0'

[dev-dependencies.sp-runtime]
default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# branch = 'rococo-v1'
version = '2.0.0'

[dependencies.registrar]
default-features = false
package = "registrar"
path = "../registrar"
version = '2.0.0'

[dependencies.timestamp]
default_features = false
# git = 'https://github.com/paritytech/substrate.git'
# branch = 'rococo-v1'
package = "pallet-timestamp"
version = '2.0.0'

[package]
authors = ['Amit Singh']
description = 'Bottle tracking pallet.'
edition = '2018'
license = 'Unlicense'
name = 'bottle-tracking'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
